Resolves: tdf#93474 crash on importing a macro library

its a SfxLibrary which is not a XLibraryContainer

(a SfxLibraryContainer is however)

I think the issue is simply an empty name making code go down the container
rather than library route.

Change-Id: Ib0245d402fe375ac26ab9f2b14fe708b2a34a7a7